# NCEPLIBS-ncio

./: .gitignore  CMakeLists.txt  Changelog  LICENSE.md  README.md  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  index.html  module__ncio_8f90.html  module__ncio_8f90.js  module__ncio_8f90_source.html  module_fv3gfs_ncio.f90  namespacemembers.html  namespacemembers_func.html  namespacemodule__ncio.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  quantize__data__code_8f90_source.html  read__attribute__code_8f90_source.html  read__scalar__attribute__code_8f90_source.html  read__vardata__code__1d_8f90_source.html  read__vardata__code__2d_8f90_source.html  read__vardata__code__3d_8f90_source.html  read__vardata__code__4d_8f90_source.html  read__vardata__code__5d_8f90_source.html  write__attribute__code_8f90_source.html  write__vardata__code_8f90_source.html
.github/workflows/: Intel.yml  Linux.yml  Linux1.yml  MacOS.yml  Spack.yml  build_and_test.yml  build_in_src_and_test.yml  developer.yml
cmake/: PackageConfig.cmake.in  mpi_test.cmake
docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
modulefiles/ncio-intel/: 1.0.0
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js
spack/: README  package.py
src/: CMakeLists.txt  module_fv3gfs_ncio.f90  module_ncio.f90  quantize_data_code.f90  read_attribute_code.f90  read_scalar_attribute_code.f90  read_vardata_code_1d.f90  read_vardata_code_2d.f90  read_vardata_code_3d.f90  read_vardata_code_4d.f90  read_vardata_code_5d.f90  write_attribute_code.f90  write_vardata_code.f90
tests/: CMakeLists.txt  dynf000_template.nc.in  test_ncio.f90  tst_ncio.F90  tst_ncio_mpi.F90
